# sqlalchemy-tutorial

./: .env.example  .gitignore  Makefile  README.md  config.py  logger.py  main.py  pyproject.toml  requirements.txt
database/: __init__.py  connect.py
sqlalchemy_tutorial/: __init__.py  cleanup.py  database.py  logger.py  models.py  orm.py  queries.py
sqlalchemy_tutorial/database/: __init__.py  connect.py  engine.py  models.py
sqlalchemy_tutorial/part1_connections/: __init__.py  engines.py  queries.py
sqlalchemy_tutorial/part2_orm/: __init__.py  models.py  orm.py
sqlalchemy_tutorial/part2_orm_models/: __init__.py  models.py  orm.py
sqlalchemy_tutorial/part3_relationships/: __init__.py  joins.py  models.py  objects.py  orm.py
