[tool.poetry]
name = "sqlalchemy-tutorial"
version = "0.1.1"
description = "Use SQLAlchemy to connect, query, and interact with relational databases."
authors = ["Todd Birchard <todd@hackersandslackers.com>"]
maintainers = ["Todd Birchard <todd@hackersandslackers.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hackersandslackers/sqlalchemy-tutorial/"
repository = "https://github.com/hackersandslackers/sqlalchemy-tutorial/"
documentation = "https://github.com/hackersandslackers/sqlalchemy-tutorial/"
keywords = ["SQL", "SQLAlchemy", "ORM", "Relational Databases", "RDBMS"]

[tool.poetry.dependencies]
python = "^3.10, <4.0"
sqlalchemy = "*"
pymysql = "*"
python-dotenv = "*"
loguru = "*"
pytest = "*"
mock = "*"
mypy = "*"
black = "*"
isort = "*"
flake8 = "*"

[tool.poetry.scripts]
run = "main:init_script"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/sqlalchemy-tutorial/issues"

[build-system]
requires = ["poetry>=1.6.1"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0301,W0703,W0621"
